objects/ASI_CRM_City_Sales_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>City Sales Targets</relationshipLabel>
        <relationshipName>City_Sales_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Sales_Value__c</fullName>
        <label>Gross Sales(Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>City Sales Targets</relationshipLabel>
        <relationshipName>City_Sales_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Qty_9L__c</fullName>
        <label>Target Qty (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>City Sales Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_City__c</columns>
        <columns>ASI_CRM_Greater_Region_Code__c</columns>
        <columns>ASI_CRM_CN_Division_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CST-{0000000}</displayFormat>
        <label>City Sales Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>City Sales Targets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_City_Sales_Target</fullName>
        <active>true</active>
        <label>ASI CRM CN City Sales Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_BA__c</fullName>
        <label>Share To BA</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_Finance__c</fullName>
        <label>Share To Finance</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_RTMK__c</fullName>
        <label>Share To RTMK</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_WS_Manager__c</fullName>
        <label>Share To WS Manager</label>
    </sharingReasons>
</CustomObject>